# atpcli

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
apcli/: __init__.py  cli.py  config.py  display.py
atpcli/: __init__.py  cli.py  config.py  constants.py  display.py  models.py  session.py  spice.py
atpcli/display/: bsky.py  spice.py
docs/: getting-started.md  index.md  install.md  usage-feeds.md  usage-login.md  usage-post.md  usage-profile.md  usage-spice.md  usage-timeline.md
lexicons/tools/spice/: note.json
tests/: test_cli.py  test_config.py  test_display.py  test_spice.py
