[project]
name = "apcli"
version = "0.1.0"
description = "A Python CLI wrapper around the atproto package"
authors = [{ name = "Paul Hallett", email = "paulandrewhallett@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "atproto>=0.0.55",
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/phalt/apcli"
Issues = "https://github.com/phalt/apcli/issues"

[project.scripts]
apcli = "apcli.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apcli"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]

[tool.coverage.run]
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
